--- a/index.html
+++ b/index.html
@@ -36,30 +36,40 @@
             </div>
           </nav>
           <!-- slider strader -->
-          <section class="container mt-5">
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-          </section>
-          <!-- slider end-- -->
+                <section class="bg-success container mt-5 rounded">
+                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <div class="row align-items-center">
+                                <div class="col-lg-7 ">
+                                    <h1>Mega LCD TV For Sports</h1>
+                                    <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
+                                    <h1>$1200</h1>
+                                    <div class="btn-btn-warning">Buy Now</div>
+                                </div>
+                                <div class="col-lg-5">
+                                    <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                                </div>
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button"                   data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button"   data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
+                </section>
+          <!-- slider end -->
     </header>
     <script>"https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"</script>
 </body>
