--- a/index.html
+++ b/index.html
@@ -23,29 +23,31 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#">Subcribe</a>
                   </li>
                 </ul>
               </div>
             </div>
-          </nav>
+        </nav>
           <!-- slider strader -->
-                <section class="bg-success container mt-5 rounded">
+                <section class="container mt-5">
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
-                          <div class="carousel-item active">
-                            <div class="row align-items-center">
-                                <div class="col-lg-7 ">
-                                    <h1>Mega LCD TV For Sports</h1>
-                                    <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
-                                    <h1>$1200</h1>
-                                    <div class="btn-btn-warning">Buy Now</div>
+                          <div class="carousel-item active bg-success  rounded p-5">
+                            <div class="row">
+                                <div class="col-lg-7 d-flex align-items-center">
+                                    <div>
+                                      <h1>Mega LCD TV For Sports</h1>
+                                      <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
+                                      <h1>$1200</h1>
+                                      <div class="btn btn-danger">Buy Now</div>
+                                    </div>
                                 </div>
                                 <div class="col-lg-5">
                                     <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -71,6 +73,73 @@
                 </section>
           <!-- slider end -->
     </header>
+    <main>
+      <section>
+        <div class="container text-center pt-5">
+          <div class="row g-3">
+            <div class="col-lg-4 col-md-6 col-sm-12 d-flex align-items-center">
+              <div class="p-3 border bg-light">
+                <h1>watch</h1>
+                <div>
+                  <img src="images/" class="card-img-top" alt="...">
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="p-3 border bg-light">Custom column padding</div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="p-3 border bg-light">Custom column padding</div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- section shows -->
+      <section class="container pt-5">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card h-100 border border-0 shadow-lg">
+              <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Supply 350</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h3>$250</h3>
+              </div>
+              <div class="m-3">
+                <button type="button" class="btn btn-warning">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 border border-0 shadow-lg">
+              <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Nike 360</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <h3>$250</h3>
+              </div>
+              <div class="m-3">
+                <button type="button" class="btn btn-warning">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 border border-0 shadow-lg">
+              <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Red Airmax</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                <h3>$250</h3>
+              </div>
+              <div class="m-3">
+                <button type="button" class="btn btn-warning">Buy Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- section shows edn -->
+    </main>
     <script>"https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"</script>
 </body>
 </html>
