--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
         </nav>
           <!-- slider strader -->
-                <section class="container mt-5">
+                <section class="container my-5">
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active bg-success  rounded p-5">
@@ -75,27 +75,38 @@
     </header>
     <main>
       <section>
-        <div class="container text-center pt-5">
+        <div class="container text-center">
           <div class="row g-3">
-            <div class="col-lg-4 col-md-6 col-sm-12 d-flex align-items-center">
-              <div class="p-3 border bg-light">
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="p-3 border bg-warning d-flex align-items-center justify-content-evenly rounded-4">
                 <h1>watch</h1>
                 <div>
-                  <img src="images/" class="card-img-top" alt="...">
+                  <img src="images/categories/watch.png" class="card-img-top" alt="...">
                 </div>
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="p-3 border bg-light">Custom column padding</div>
+              <div class="p-3 border bg-primary d-flex align-items-center justify-content-evenly rounded-4">
+                <h1>Bag</h1>
+                <div>
+                  <img src="images/categories/bag.png" class="card-img-top" alt="...">
+                </div>
+              </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="p-3 border bg-light">Custom column padding</div>
+              <div class="p-3 border bg-success d-flex align-items-center justify-content-evenly rounded-4">
+                <h1>Shoes</h1>
+                <div>
+                  <img src="images/categories/shoes.png" class="card-img-top" alt="...">
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </section>
       <!-- section shows -->
       <section class="container pt-5">
+        <h1 class="container">Shoes</h1>
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
             <div class="card h-100 border border-0 shadow-lg">
@@ -139,6 +150,52 @@
         </div>
       </section>
       <!-- section shows edn -->
+      <!-- section bag strated -->
+      <section class="container pt-5">
+        <h1 class="container">Bag</h1>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card h-100 border border-0 shadow-lg">
+              <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Red Laltu Bag</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. </p>
+                <h3>$250</h3>
+              </div>
+              <div class="m-3">
+                <button type="button" class="btn btn-warning">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 border border-0 shadow-lg">
+              <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Blue Niltu Bag</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <h3>$250</h3>
+              </div>
+              <div class="m-3">
+                <button type="button" class="btn btn-warning">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 border border-0 shadow-lg">
+              <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Black Kaltu Bag</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                <h3>$250</h3>
+              </div>
+              <div class="m-3">
+                <button type="button" class="btn btn-warning">Buy Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- section bag end -->
     </main>
     <script>"https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"</script>
 </body>
