--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"> -->
   <title>panda-commerce-boostrap</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -42,14 +44,14 @@
     <section class="container my-5">
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active bg-success  rounded p-5">
+          <div class="carousel-item active panda-bg-color  rounded p-5">
             <div class="row">
               <div class="col-lg-7 d-flex align-items-center">
                 <div>
                   <h1>Mega LCD TV For Sports</h1>
                   <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
                   <h1>$1200</h1>
-                  <div class="btn btn-danger">Buy Now</div>
+                  <div class="panda-btn-buy-now slide-btn">Buy Now</div>
                 </div>
               </div>
               <div class="col-lg-5">
@@ -57,11 +59,35 @@
               </div>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+          <div class="carousel-item panda-bg-color  rounded p-5">
+            <div class="row">
+              <div class="col-lg-7 d-flex align-items-center">
+                <div>
+                  <h1>Mega LCD TV For Sports</h1>
+                  <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
+                  <h1>$1200</h1>
+                  <div class="panda-btn-buy-now slide-btn">Buy Now</div>
+                </div>
+              </div>
+              <div class="col-lg-5">
+                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
           </div>
-          <div class="carousel-item">
-            <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+          <div class="carousel-item panda-bg-color  rounded p-5">
+            <div class="row">
+              <div class="col-lg-7 d-flex align-items-center">
+                <div>
+                  <h1>Mega LCD TV For Sports</h1>
+                  <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
+                  <h1>$1200</h1>
+                  <div class="panda-btn-buy-now slide-btn">Buy Now</div>
+                </div>
+              </div>
+              <div class="col-lg-5">
+                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -83,7 +109,7 @@
       <div class="container text-center">
         <div class="row g-3">
           <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="p-3 border bg-warning d-flex align-items-center justify-content-evenly rounded-4">
+            <div class="p-3 border bg-warning d-flex align-items-center justify-content-evenly rounded">
               <h1>watch</h1>
               <div>
                 <img src="images/categories/watch.png" class="card-img-top" alt="...">
@@ -91,7 +117,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="p-3 border bg-primary d-flex align-items-center justify-content-evenly rounded-4">
+            <div class="p-3 border bg-primary d-flex align-items-center justify-content-evenly rounded">
               <h1>Bag</h1>
               <div>
                 <img src="images/categories/bag.png" class="card-img-top" alt="...">
@@ -99,7 +125,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="p-3 border bg-success d-flex align-items-center justify-content-evenly rounded-4">
+            <div class="p-3 border bg-success d-flex align-items-center justify-content-evenly rounded">
               <h1>Shoes</h1>
               <div>
                 <img src="images/categories/shoes.png" class="card-img-top" alt="...">
@@ -123,7 +149,7 @@
               <h3>$250</h3>
             </div>
             <div class="m-3">
-              <button type="button" class="btn btn-warning">Buy Now</button>
+              <button type="button" class="panda-btn-buy-now">Buy Now</button>
             </div>
           </div>
         </div>
@@ -136,7 +162,7 @@
               <h3>$250</h3>
             </div>
             <div class="m-3">
-              <button type="button" class="btn btn-warning">Buy Now</button>
+              <button type="button" class="panda-btn-buy-now">Buy Now</button>
             </div>
           </div>
         </div>
@@ -150,7 +176,7 @@
               <h3>$250</h3>
             </div>
             <div class="m-3">
-              <button type="button" class="btn btn-warning">Buy Now</button>
+              <button type="button" class="panda-btn-buy-now">Buy Now</button>
             </div>
           </div>
         </div>
@@ -171,7 +197,7 @@
               <h3>$250</h3>
             </div>
             <div class="m-3">
-              <button type="button" class="btn btn-warning">Buy Now</button>
+              <button type="button" class="panda-btn-buy-now">Buy Now</button>
             </div>
           </div>
         </div>
@@ -184,7 +210,7 @@
               <h3>$250</h3>
             </div>
             <div class="m-3">
-              <button type="button" class="btn btn-warning">Buy Now</button>
+              <button type="button" class="panda-btn-buy-now">Buy Now</button>
             </div>
           </div>
         </div>
@@ -198,7 +224,7 @@
               <h3>$250</h3>
             </div>
             <div class="m-3">
-              <button type="button" class="btn btn-warning">Buy Now</button>
+              <button type="button" class="panda-btn-buy-now">Buy Now</button>
             </div>
           </div>
         </div>
@@ -206,7 +232,7 @@
     </section>
     <!-- section bag end -->
     <!-- subcribe start -->
-    <section style="height: 300px;" class="container mt-5 d-flex bg-info justify-content-center align-items-center rounded" id="subcrib">
+    <section style="height: 300px;" class="container mt-5 d-flex panda-bg-color justify-content-center align-items-center rounded" id="subcrib">
       <div>
         <h2>LET'S STAY IN TOUCH</h2>
         <p>Get updates on sales, specials and more</p>
@@ -214,7 +240,7 @@
           <div class="mb-1">
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="panda-btn-buy-now">Submit</button>
         </form>
       </div>
     </section>
@@ -223,7 +249,8 @@
   <footer class="mt-5 text-center">
     <p><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
   </footer>
-  <script>"https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"</script>
+  <!-- <script>"https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"</script> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
